<resources>
    <string name="app_name">柚子小部件</string>
    <string name="app_title">Yuzusoft小部件</string>
    <string name="choose_wife_text">请选择你的老婆</string>
    <string name="choose_wife_clothes_text">选择老婆服装</string>
    <string name="complete_action_text">完成</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="choose_character_text">选中角色</string>
    <string name="choose_clothes_text">选中服装</string>
    <string name="alarm_modify_text">编辑闹钟</string>
    <string name="repeat_date_text">重复日期</string>
    <string name="choose_voice_text">选择老婆音</string>
    <string name="add_alarm_tip_text">赶快添加闹钟吧！</string>
    <string name="add_alarm_menu_item_text">添加闹钟</string>
    <string name="complete_text">完成</string>
    <string name="long_click_unlock_text">长按小徽章解锁</string>
    <string name="about_app_text">关于应用</string>
    <string name="about_app_content">\u3000
        1. 本应用为开源软件，且未在应用商店发布，应用的更新将会在本应用的Github仓库进行。
        \n\u3000
        2. 仓库地址: https://github.com/yumeTsukiiii/YuzusoftAppWidget
        \n\u3000
        3. 通常安装新版本的应用程序，不需要卸载原程序，如有特殊情况，作者将会在Github上进行说明
        \n\u3000
        4. 应用的使用，参考作者在bilibili上发布的视频。
    </string>
    <string name="about_author_text">关于作者</string>
    <string name="abount_author_content">\u3000
        某高校三年生，爱好编程、吉他，资深(?)柚子厨
        \n\u3000
        作者的bilibili账号: Yajusoftの梦月
        \n\u3000
        作者经常修福报，所以，无论什么要求，作者都会好好听的
    </string>
    <string name="onegai_text">请多多支持！</string>
    <string name="enegai_content">\u3000
        作者将会持续更新该应用，如果大家喜欢，希望大家:
        \n\u3000
        1. 关注作者的bilibili账号: 见上方
        \n\u3000
        2. Star作者该应用的Github仓库: 见上方
        \n\u3000
        3. 加入QQ反馈群提出各种各样程序员讨厌的需求: 488687641
        \n\u3000
        4. 梦月爱你们！
    </string>
    <string name="app_info_appbar_title">应用说明</string>
    <string name="alarm_settings_appbar_title">闹钟设置</string>


    <string name="add_character_text">添加角色</string>
    <string name="save_page_text">保存</string>
    <string name="exit_edit_text">退出编辑</string>
    <string name="select_character_text">选择角色</string>
    <string name="story_board_text">故事板</string>
    <string name="add_chapter_text">添加章节</string>
    <string name="save_text">保存</string>
    <string name="add_condition_text">添加分支</string>
    <string name="edit_mode_text">编辑模式</string>
    <string name="add_story_text">添加故事</string>
    <string name="story_name_text">故事名称</string>
    <string name="no_story_tip">还没有同人故事唔姆！快去写一个唔姆！</string>
    <string name="no_chapter_tip">还没有章节唔姆！赶紧创建一个唔姆！</string>
    <string name="chapter_name_text">章节名称</string>
    <string name="switch_background_btn">切换背景</string>
    <string name="background_select_text">选择背景</string>
    <string name="history_page_text">历史页面</string>
    <string name="next_page_text">下一页</string>
    <string name="start_new_text">开始新的</string>
    <string name="load_record_data_text">读取存档</string>
    <string name="no_save_record_tip">没有存档啦～</string>
    <string name="choose_chapter_text">选择章节</string>
</resources>
