<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mAppInfoLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page.app_info.fragments.AppInfoFragment"
    tools:background="@drawable/senrenbanka_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mAboutAppAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@android:color/transparent"
        app:elevation="0dp"
        android:layout_marginTop="28dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mAboutAppToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="@string/app_info_appbar_title"
            app:titleTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#aaffffff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mAboutAppTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_app_text"
                        android:textAlignment="center"
                        android:layout_margin="8dp"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textSize="20sp"
                        android:textColor="#f06292"
                        android:text="@string/about_app_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:cardCornerRadius="8dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="#aaffffff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mAboutAuthorTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_author_text"
                        android:textAlignment="center"
                        android:layout_margin="8dp"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textSize="20sp"
                        android:textColor="#f06292"
                        android:text="@string/abount_author_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="#aaffffff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mOnegaiTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/onegai_text"
                        android:textAlignment="center"
                        android:layout_margin="8dp"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textSize="20sp"
                        android:textColor="#f06292"
                        android:text="@string/enegai_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
