<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/senrenbanka_background" />

    <TextView
        android:id="@+id/mNoChapterTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="#66000000"
        android:text="@string/no_chapter_tip"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mChapterEditRecyclerView"
        android:layout_marginTop="28dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/mRightToolDrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center|end"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/mToggleRightToolDrawerImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@android:color/darker_gray"
            android:background="@drawable/background_left_round_transwhite"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_keyboard_arrow_left_white_24dp"/>

        <ScrollView
            android:id="@+id/mRightToolDrawerContent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/background_left_round_transwhite">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mAddChapterBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_chapter_text"
                    android:layout_marginTop="8dp"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_condition_text"
                    android:visibility="gone"
                    android:layout_marginTop="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mExitChapterEditBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit_edit_text"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>